# libtimestretch

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  NOTE  README  config.status  configure  configure.ac  err  mksysmap.sh
.deps/: overticklib.Po  timestretchlib.Po
autom4te.cache/: output.0  requests  traces.0
lib/: overtick.h  overticklib.c  timestretch.h  timestretchlib.c
module/: .built-in.o.cmd  .overtick.mod.o.cmd  .overtick.o.cmd  .timestretch.ko.cmd  .timestretch.mod.o.cmd  .timestretch.o.cmd  83-overtick.rules  Makefile  modules.order  overtick.c  overtick.h  overtick.ko  overtick.state-machine.c  timestretch.c  timestretch.h  timestretch.ko  timestretch.mod.c
module/.tmp_versions/: timestretch.mod
test/: Makefile  correctness.c  example.c
test-DES/: Makefile  callback.c  checkpoint.h  debug6.h  entry.S  event-pcs.h  eventlist6.h  eventlist7-dynamic.h  eventlist7-static.c  eventlist7-static.h  events.h  log.h  pcs.h  stub.h  the-skeleton-stub.c  the-skeleton.c
test-DES/JOB-SERVICE-CENTERS/: model.c
test-loop/: Makefile  callback.c  checkpoint.h  def.h  eventlist.h  eventlist6.c  random.c  the-skeleton.c
test-loop/JOB-SERVICE-CENTERS/: model.c  model.c.old
test-p/: Makefile  cpu-consumer  cpu-consumer.c  example  example.c  timer.h
test-r/: Makefile  callback.c  entry.S  test-r  test-r.S  test-r.c
